--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "devDependencies": {
     "bem": "^0.10.2",
+    "bem-grid": "^2.3.2",
     "borschik-tech-cleancss": "^2.1.0",
     "enb": "^1.1.2",
     "enb-bem-techs": "^2.2.1",
-    "enb-bemxjst": "^4.1.0",
+    "enb-bemxjst": "^5.0.0",
     "enb-borschik": "^2.3.0",
     "enb-js": "^1.1.0",
     "enb-stylus": "^2.2.0"
