--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bem": "^0.10.2",
     "bem-grid": "^2.3.2",
     "borschik-tech-cleancss": "^2.1.0",
+    "browser-sync": "^2.11.2",
     "enb": "^1.1.2",
     "enb-bem-techs": "^2.2.1",
     "enb-bemxjst": "^5.0.0",
@@ -24,7 +25,7 @@
     "enb-stylus": "^2.2.0"
   },
   "scripts": {
-    "start": "enb server",
+    "start": "enb server & browser-sync start --files \"*.blocks/**/*, *.bundles/**/*.bemjson.js\" --proxy 0.0.0.0:8080",
     "postinstall": "npm run deps",
     "deps": "bower i --allow-root"
   },
