Настроить фриз статики и сборку

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ npm-debug.log
 *pages*/*/*.*
 !*pages*/*/*.bemjson.js
 !*pages*/.bem/*
+
+# borschik's static freeze
+*bundles*/*/img/
+
+deploy/
+output/
